--- a/src/App.css
+++ b/src/App.css
@@ -8,32 +8,33 @@
   pointer-events: none;
 }
 .navbar {
-  padding: 1rem;
-  margin: 1rem;
+  padding: 0.25rem;
+  margin: 0.25rem;
   font-family: "Mohave", sans-serif;
   font-size: 2rem;
   color: cadetblue;
-  background-color: rgb(184, 178, 178);
+  background-color: rgb(226, 220, 220);
 }
 .navbar nav ul li {
   list-style-type: none;
   display: inline-block;
-  padding: 4rem;
-  padding-left: 10vw;
-  padding-right: 30vw;
+  padding: 1rem;
   margin: 0.5rem;
   color: rgb(27, 78, 80);
   text-align: center;
 }
 .header {
-  background-color: rgb(184, 178, 178);
+  background-color: rgb(247, 243, 243);
+}
+.footer {
+  background-color: rgb(247, 243, 243);
 }
 .header h1 {
   font-family: "Mohave", sans-serif;
   font-size: 4rem;
   align-self: center;
   text-align: center;
-  color: rgb(12, 67, 69);
+  color: rgb(12, 37, 69);
 }
 .home h1 {
   font-family: "Mohave", sans-serif;
@@ -69,9 +70,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgb(220, 220, 245);
 }
 .back {
-  background-color: #2e3033;
+  background-color: #4b1550;
   color: white;
   padding: 0.5rem;
 }
@@ -82,10 +85,11 @@ body {
   border-width: 2px;
   margin: 1rem;
   padding: 1rem;
-  position: relative;
+  /*  position: relative; */
   width: 700px;
   height: 300px;
   font-family: "Mohave", sans-serif;
+  font-size: 1rem;
 }
 .searchInput {
   padding: 2rem;
@@ -102,12 +106,19 @@ body {
   margin: 0.5rem;
   margin-left: 30vw;
   font-family: "Mohave", sans-serif;
+  color: hsl(0, 83%, 23%);
+  font-size: 2rem;
 }
 .countries {
   /* display: block;
   justify-content: space-between; */
+
   text-align: center;
   font-family: "Mohave", sans-serif;
+}
+.countrymain {
+  display: inline-flexbox;
+  justify-content: space-between;
 }
 .countries div img {
   width: 50px;
@@ -167,6 +178,11 @@ body {
   border-radius: 5px;
   position: relative;
   font-family: "Mohave", sans-serif;
+}
+.footer p {
+  font-family: "Mohave", sans-serif;
+  text-align: center;
+  font-size: 1rem;
 }
 .App-link {
   color: #61dafb;
