--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,12 @@ body {
 }
 
 .country {
-  display: inline-block;
+  display: inline-block; 
   border-style: solid;
   border-width: 2px;
   margin: 1rem;
   padding: 1rem;
-  /*  position: relative; */
+   position: relative;
   width: 700px;
   height: 300px;
   font-family: "Mohave", sans-serif;
@@ -112,14 +112,19 @@ body {
 .countries {
   /* display: block;
   justify-content: space-between; */
-
+  
+  justify-content: space-between;
   text-align: center;
   font-family: "Mohave", sans-serif;
 }
-.countrymain {
+/* .countrymain {
   display: inline-flexbox;
   justify-content: space-between;
-}
+} */
+/* .flex{
+  display:grid;
+  justify-content: space-between;
+} */
 .countries div img {
   width: 50px;
   height: 50px;
@@ -176,7 +181,7 @@ body {
 .country {
   box-shadow: 0 0 5px rgb(92, 92, 92);
   border-radius: 5px;
-  position: relative;
+  /* position: relative; */
   font-family: "Mohave", sans-serif;
 }
 .footer p {
